The whole logic of quantity changing done

--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -2,6 +2,10 @@
   box-shadow: 5px 5px 10px;
 }
 
+.productCardImage {
+  padding: 1rem;
+}
+
 .cardFooter {
   display: flex;
   justify-content: flex-end;
