--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -2,8 +2,38 @@
   box-shadow: 5px 5px 10px;
 }
 
+.cardHeader {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 25px;
+}
+
+.id {
+  color: grey;
+}
+
+.imageBox {
+  max-height: 300px;
+}
+
 .productCardImage {
   padding: 1rem;
+  max-width: 100%;
+  width: unset;
+  max-height: 100%;
+}
+
+.cardBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.category {
+  margin-bottom: 1rem;
+  padding-right: 16px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .cardFooter {
