--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -38,7 +38,7 @@
 
 .cardFooter {
   display: flex;
-  justify-content: flex-end;
+  justify-content:flex-end;
   align-items: center;
 }
 
@@ -52,6 +52,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.delButtonWrapper {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.delButton{
+  max-height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: blur 1.9s ease;
+  animation-delay: -1.5s;
+}
+
+@keyframes blur {
+  0% {
+    filter: blur(80px);
+    color: rgb(244, 239, 239);
+  }
+  100% {
+    filter: blur(0);
+  }
 }
 
 .quantity {
